apps/media/tautulli/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
spec:
  serviceName: tautulli
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      automountServiceAccountToken: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.18.2
          ports:
            - name: tautulli-port
              containerPort: 8181
          resources:
            requests:
              cpu: 25m
              memory: 225Mi
            limits:
              memory: 350Mi
          volumeMounts:
            - name: config
              mountPath: /config
          startupProbe:
            httpGet:
              path: /status
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
            failureThreshold: 24
          livenessProbe:
            httpGet:
              path: /status
              port: 8181
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /status
              port: 8181
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linstor-r3
        resources:
          requests:
            storage: 5Gi
