apps/media/tautulli/ingress.yaml
# ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-ingress-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.i.recompiled.org`)
      kind: Rule
      services:
        - name: tautulli
          port: 8181
  tls:
    secretName: tautulli-tls
